# anotheryet-fastapi-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  cli.py  docker-compose.yaml  fastapi-start-dev.sh  main.py  pyproject.toml  ruff.toml
app/: config.py
app/db/: models.py
app/db/migrations/: env.py
src/app/: config.py  main.py
src/app/api/auth/: route.py  schema.py
src/app/api/users/: route.py
src/app/api/v1/posts/: schema.py
src/app/api/v1/users/: route.py  schema.py  service.py
src/app/core/: auth.py  base_repository.py  cache.py  security.py
src/app/db/: session.py
src/app/db/alembic/: env.py
src/app/db/alembic/versions/: 202408301724_init.py
tests/: conftest.py  test_base_repository.py
