[project]
name = "yet-another-fastapi-template"
version = "0.1.0"
description = """A modern, opinionated FastAPI template for building Python web applications with best practices and a well-structured codebase.
                 It leverages a cutting-edge stack for optimal performance, maintainability, and developer productivity,
                 making it an ideal starting point for your next project."""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "sqlalchemy>=2.0.37",
    "asyncpg>=0.30.0",
    "alembic>=1.14.1",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.7.1",
    "greenlet>=3.1.1",
    "redis>=5.2.1",
    "cryptography>=44.0.0",
    "python-jose>=3.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "bandit[toml]>=1.8.2",
    "pre-commit>=4.1.0",

]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
